--- a/rangiffler-client/tsconfig.json
+++ b/rangiffler-client/tsconfig.json
@@ -14,7 +14,11 @@
     "strict": true /* Enable all strict type-checking options. */,
     "skipLibCheck": true /* Skip type checking of declaration files. */,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "paths": {
+      "@img/*": ["./src/static/img/*"],
+      "@fonts/*": ["./src/static/fonts/*"],
+    }
   },
   "include": ["src/**/*"]
 }
