--- a/rangiffler-gateway/build.gradle
+++ b/rangiffler-gateway/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     implementation "org.springframework:spring-webflux"
     implementation "org.springframework.boot:spring-boot-starter-validation"
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     compileOnly 'org.projectlombok:lombok:1.18.26'
