--- a/rangiffler-client/package.json
+++ b/rangiffler-client/package.json
@@ -67,6 +67,7 @@
     "axios": "^1.3.4",
     "buffer": "^6.0.3",
     "crypto-js": "^4.1.1",
+    "dotenv-webpack": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
