--- a/rangiffler-client/package.json
+++ b/rangiffler-client/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack --mode development",
-    "build": "cross-env NODE_ENV=production webpack --mode production",
+    "build:docker": "cross-env NODE_ENV=production webpack --mode production",
+    "build:test": "cross-env NODE_ENV=test webpack --mode production",
     "start": "cross-env NODE_ENV=development webpack serve --mode development --open",
     "lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\"",
     "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\""
