--- a/rangiffler-api/src/main/resources/application.yml
+++ b/rangiffler-api/src/main/resources/application.yml
@@ -1,19 +1,16 @@
 server:
-  port: 9000
-  # ONLY FOR TESTING
-  servlet:
-    session:
-      cookie:
-        http-only: false
-        secure: false
+  port: 8080
 
 spring:
   application:
-    name: rangiffler-auth
-  mvc:
-    log-request-details: true
+    name: rangiffler-api
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: 'http://127.0.0.1:9000'
   datasource:
-    url: 'jdbc:mysql://127.0.0.1:3306/rangiffler-auth?serverTimezone=UTC&createDatabaseIfNotExist=true'
+    url: 'jdbc:mysql://127.0.0.1:3306/rangiffler-api?serverTimezone=UTC&createDatabaseIfNotExist=true'
     hikari:
       connection-timeout: 20000
       minimum-idle: 10
@@ -28,7 +25,7 @@ spring:
     baseline-on-migrate: true
     baseline-version: 0
     schemas: public
-    locations: classpath:db/migration/rangiffler-auth
+    locations: classpath:db/migration/rangiffler-api
   jpa:
     hibernate:
       ddl-auto: none
@@ -48,9 +45,6 @@ logging:
     org.springframework.web: DEBUG
     org.springframework.security: DEBUG
     org.springframework.security.oauth2: DEBUG
-#    org.springframework.boot.autoconfigure: DEBUG
 
 rangiffler-front:
   base-uri: 'http://127.0.0.1:3001'
-rangiffler-auth:
-  base-uri: 'http://127.0.0.1:9000'
