--- a/rangiffler-gql-client/package.json
+++ b/rangiffler-gql-client/package.json
@@ -10,16 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.9.6",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.15.5",
     "@mui/material": "^5.15.5",
+    "buffer": "^6.0.3",
+    "crypto-js": "^4.2.0",
+    "dotenv": "^16.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.2"
+    "react-router-dom": "^6.21.2",
+    "react-svg-worldmap": "^2.0.0-alpha.16"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
+    "@types/node": "^20.11.25",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
