--- a/rangiffler-api/src/main/resources/application.yml
+++ b/rangiffler-api/src/main/resources/application.yml
@@ -4,6 +4,9 @@ server:
 spring:
   application:
     name: rangiffler-api
+  graphql:
+    graphiql:
+      enabled: true
   security:
     oauth2:
       resourceserver:
