--- a/rangiffler-auth/build.gradle
+++ b/rangiffler-auth/build.gradle
@@ -1,11 +1,10 @@
 plugins {
-    id 'java'
-    id 'org.springframework.boot' version '3.2.3'
-    id 'io.spring.dependency-management' version '1.1.4'
+    id 'org.springframework.boot' version '3.3.4'
+    id 'io.spring.dependency-management' version '1.1.6'
 }
 
 group = 'org.rangiffler'
-version '0.0.1-SNAPSHOT'
+version '1.0'
 
 repositories {
     mavenCentral()
@@ -13,17 +12,17 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-authorization-server'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
     implementation "org.springframework.boot:spring-boot-starter-validation"
-    implementation 'org.springframework.security:spring-security-oauth2-authorization-server:1.2.2'
-    implementation 'org.flywaydb:flyway-core:10.8.1'
-    implementation 'org.flywaydb:flyway-mysql:10.8.1'
+    implementation 'org.flywaydb:flyway-core:10.17.1'
+    implementation 'org.flywaydb:flyway-mysql:10.17.1'
     runtimeOnly 'mysql:mysql-connector-java:8.0.33'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    compileOnly 'org.projectlombok:lombok:1.18.30'
-    annotationProcessor 'org.projectlombok:lombok:1.18.30'
+    compileOnly 'org.projectlombok:lombok:1.18.34'
+    annotationProcessor 'org.projectlombok:lombok:1.18.34'
 }
 
 test {
