--- a/rangiffler-e2e/build.gradle
+++ b/rangiffler-e2e/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     ext {
         junitVersion = '5.11.1'
         allureVersion = '2.29.0'
+        okhttp3Version = '4.11.0'
         logbackVersion = '1.4.11'
         slf4jVersion = '2.0.9'
         fakerVersion = '1.0.2'
@@ -11,6 +12,7 @@ buildscript {
 plugins {
     id 'io.qameta.allure' version '2.12.0'
     id 'io.qameta.allure-adapter' version '2.12.0'
+    id 'com.apollographql.apollo' version '4.0.0'
 }
 
 group = 'org.rangiffler'
@@ -24,17 +26,29 @@ allure {
     }
 }
 
+apollo {
+    service("service") {
+        generateKotlinModels.set(false)
+        packageName.set("org.rangiffler")
+    }
+}
+
 dependencies {
     // Logs
     testImplementation "ch.qos.logback:logback-classic:${logbackVersion}"
     testImplementation "org.slf4j:slf4j-api:${slf4jVersion}"
     // JUnit
     testImplementation "org.junit.jupiter:junit-jupiter:${junitVersion}"
+    // GraphQL
+    testImplementation 'com.apollographql.java:client:0.0.2'
+    testImplementation "com.squareup.okhttp3:logging-interceptor:${okhttp3Version}"
     // Allure
     testImplementation("io.qameta.allure:allure-junit5:${allureVersion}") {
         exclude group: "org.junit.jupiter"
     }
-    testImplementation "io.qameta.allure:allure-okhttp3:${allureVersion}"
+    testImplementation("io.qameta.allure:allure-okhttp3:${allureVersion}") {
+        exclude group: "com.squareup.okhttp3"
+    }
     // Utils
     testImplementation("com.github.javafaker:javafaker:${fakerVersion}") {
         exclude group: 'org.yaml'
