--- a/rangiffler-api/src/main/resources/application.yml
+++ b/rangiffler-api/src/main/resources/application.yml
@@ -7,6 +7,9 @@ spring:
   graphql:
     graphiql:
       enabled: true
+    schema:
+      introspection:
+        enabled: true
   security:
     oauth2:
       resourceserver:
