--- a/rangiffler-api/build.gradle
+++ b/rangiffler-api/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-graphql'
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
     implementation 'com.tailrocks.graphql:graphql-datetime-spring-boot-starter:6.0.0'
     implementation 'org.flywaydb:flyway-core:10.17.1'
     implementation 'org.flywaydb:flyway-mysql:10.17.1'
