--- a/rangiffler-api/src/main/resources/application.yml
+++ b/rangiffler-api/src/main/resources/application.yml
@@ -12,13 +12,7 @@ spring:
         enabled: true
     websocket:
       path: /graphql
-  security:
-    oauth2:
-      resourceserver:
-        jwt:
-          issuer-uri: 'http://127.0.0.1:9000'
   datasource:
-    url: 'jdbc:mysql://127.0.0.1:3306/rangiffler-api?serverTimezone=UTC&createDatabaseIfNotExist=true'
     hikari:
       connection-timeout: 20000
       minimum-idle: 10
@@ -50,9 +44,36 @@ spring:
 logging:
   level:
     root: INFO
-    org.springframework.web: DEBUG
-    org.springframework.security: DEBUG
-    org.springframework.security.oauth2: DEBUG
+    org.springframework.web: INFO
+    org.springframework.security: INFO
+    org.springframework.security.oauth2: INFO
 
+---
+spring:
+  config:
+    activate:
+      on-profile: 'local'
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: 'http://127.0.0.1:9000'
+  datasource:
+    url: 'jdbc:mysql://127.0.0.1:3306/rangiffler-api?serverTimezone=UTC&createDatabaseIfNotExist=true'
 rangiffler-front:
   base-uri: 'http://127.0.0.1:3001'
+---
+spring:
+  config:
+    activate:
+      on-profile: 'docker'
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: 'http://auth.rangiffler.dc:9000'
+  datasource:
+    url: 'jdbc:mysql://rangiffler-mysql:3306/rangiffler-api?serverTimezone=UTC&createDatabaseIfNotExist=true'
+rangiffler-front:
+  base-uri: 'http://client.rangiffler.dc'
+---
